# TestJenkins

./: .gitignore  CMakeLists.txt  main.cpp
src/: Queue.cpp  Queue.h  main.cpp
tests/: my_test.cpp
